# smelt

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  Makefile  README.md  build.rs
.github/workflows/: release.yml  signal.yml
crates/smelt/: Cargo.toml
crates/smelt-acp-view/: Cargo.toml
crates/smelt-acp-view/src/: acp_view.rs
crates/smelt-bridge/src/: main.rs
crates/smelt-core/: Cargo.toml  build.rs
crates/smelt-core/src/: acp_chat.rs  acp_client.rs  acp_conn.rs  acp_session.rs  agent_kind.rs  lib.rs  osc.rs  permission_menu.rs  remote_gateway.rs  term_text.rs  title_spinner.rs  workspace_override.rs
crates/smelt-signal/: Cargo.toml  build.rs
crates/smelt-signal/src/: main.rs  spa.rs  ws.rs
crates/smeltd/: Cargo.toml
crates/workspace/: Cargo.toml
deploy/signal/: README.md  WEB-CONSOLE.md  install-coturn.sh  install.sh  push-from-mac.sh
docs/: collaboration.md  product-roadmap.md  remote-ops-roadmap.md  roadmap.md  share.md  terminal-rendering-gaps.md  terminal-selection-plan.md  webrtc-edge.md  workspace.md
remote-web/: README.md
remote-web/src/: api.ts  styles.css
scripts/: dmg-settings.py  handoff-daemon-to-managed.sh  package-mac.sh
src/: brief.rs  chat.rs  claude.rs  db.rs  digest.rs  git.rs  init.rs  install.rs  main.rs  merge.rs  model.rs  osc.rs  permission_menu.rs  remote_gateway.rs  remote_gateway_console_page.html  remote_gateway_list_page.html  remote_gateway_page.html  render.rs  scan.rs  title_spinner.rs
src/feishu/: discovery.rs  gateway.rs  login.rs  messages.rs  mod.rs  proto.rs
website/content/: develop.md  docs.md
(+33 files in other folders)
