# ACP 会话消息流视图：第二种会话类型的 GPUI 渲染层，独立成 crate。是个薄客户端
# ——agent 子进程由 smeltd 托管（连接层 + 归约都在 smelt-core::acp_conn /
# acp_session），这里只消费 smelt-core::acp_client 给的快照并渲染、把用户操作
# 打包发回去，见 acp_view.rs 文件头注释。
[package]
name = "smelt-acp-view"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
smelt-core = { path = "../smelt-core" }
smelt-ui = { path = "../smelt-ui" }
gpui = { git = "https://github.com/zed-industries/zed", rev = "1d217ee39d381ac101b7cf49d3d22451ac1093fe" }
gpui-component = { git = "https://github.com/longbridge/gpui-component", features = ["tree-sitter-languages"] }
# 仅用于 SessionId 这一个类型（acp_session_id 字段/存档边界），协议本身的连接
# 驱动已经不在这层了。
agent-client-protocol = { version = "=1.3.0", features = ["unstable_elicitation"] }
smol = "2"
uuid = { version = "1", features = ["v4"] }
# ACP 对话粘贴图片：协议要 base64 后的字节（见 PromptImage）。
base64 = "0.22"
